--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     <div class="col-md-5 twenty">
       <p><a href="https://docs.google.com/presentation/d/1VsdtB07jCwC4YfnHmr9VaDwTy2UsmpZe/edit#slide=id.p6" target="_blank">作業02</a> (10%)</p>
       <hr>
-      <p>投影片 <a href="https://github.com/你的帳號/mc2024f/hw02.pptx">https://github.com/你的帳號/mc2024/hw02.pptx</a></p>
+      <p>投影片 <a href="https://github.com/alex1151212/mc2024f/hw02.pptx">https://github.com/alex1151212/mc2024/hw02.pptx</a></p>
       <hr>
       <p>心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。</p>
       <hr>
@@ -370,7 +370,7 @@
     <div class="col-md-5 twenty">
       <p><a href="https://docs.google.com/presentation/d/1iXXcvmW4FlLpgb4kOPlsQRE0aX-ZQj2a/edit#slide=id.p6" target="_blank">作業04</a> (10%) </p>
       <hr>
-      <p>投影片 <a href="https://github.com/你的帳號/mc2024f/mc04.pptx">https://github.com/你的帳號/mc2024/hw04.pptx</a></p>
+      <p>投影片 <a href="https://github.com/alex1151212/mc2024f/mc04.pptx">https://github.com/alex1151212/mc2024/hw04.pptx</a></p>
       <hr>
       <p>心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。</p>
       <hr>
@@ -404,7 +404,7 @@
     <div class="col-md-5 twenty">
       <p><a href="https://docs.google.com/presentation/d/1GMoBxAc1YytVVwHm_TnairZSRW0N9U1E/edit#slide=id.p6" target="_blank">作業05</a> (20%)</p>
       <hr>
-      <p>作業五倉儲 <a href="https://github.com/你的帳號/mc2024fhw06/">https://github.com/你的帳號/mc2024fhw05/</a></p>
+      <p>作業五倉儲 <a href="https://github.com/alex1151212/mc2024fhw06/">https://github.com/alex1151212/mc2024fhw05/</a></p>
       <hr>
       <p>心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。</p>
       <hr>
