✨ : hw5, hw6 impression

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
       <hr>
       <p>作業五倉儲 <a href="https://github.com/alex1151212/mc2024fhw06/">https://github.com/alex1151212/mc2024fhw05/</a></p>
       <hr>
-      <p>心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。</p>
+      <p>這個作業很有趣讓我們可以自己製作出可以互動的介面模擬在直播時V皮跟觀眾互動的樣子，裡面包含了三個動作以及一個donate的特效，我覺得非常有趣。</p>
       <hr>
       <!-- hw05: 評分表 -->
       <table>
@@ -434,7 +434,7 @@
       <hr>
       <p>作業六倉儲 <a href="https://github.com/alex1151212/mc2024fhw06/">https://github.com/alex1151212/mc2024fhw06/</a></p>
       <hr>
-      <p>心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。</p>
+      <p>心得報告 105 字。這次的作業讓我學到了很多關於動態捕捉與虛擬網紅的知識。這次作業我有上網參考了一下演唱會的鏡頭運用來作為這次作業的運鏡，這次的場景是使用以前大學畢業製作所做的模型並在做一些位置上的調整，但在燈光材質上因為匯入時會跟一般的shader衝，所以就將以前的燈光效果拔掉，看起來比較陽春。</p>
       <hr>
       <!-- hw06: 評分表 -->
       <table>
